[gd_scene load_steps=12 format=3 uid="uid://do518bgl3jbe"]

[ext_resource type="Script" uid="uid://busu77ord1l5j" path="res://src/screens/tutorial/tutorial.gd" id="1_36w3r"]
[ext_resource type="FontFile" uid="uid://bv44481q4ecxo" path="res://assets/fonts/Cinzel-VariableFont_wght.ttf" id="2_ejcdf"]
[ext_resource type="PackedScene" uid="uid://ba6uwpdy60qt7" path="res://src/screens/level_manager.tscn" id="2_ohlq4"]
[ext_resource type="Script" uid="uid://crulf3v6bgps0" path="res://src/screens/tutorial/next_scene.gd" id="3_ohlq4"]
[ext_resource type="StyleBox" uid="uid://6i15xwt8beow" path="res://assets/utility/gradient.tres" id="4_152ie"]
[ext_resource type="PackedScene" uid="uid://bt8hbslvj0sft" path="res://src/screens/tutorial/action_and_keys.tscn" id="4_ejcdf"]
[ext_resource type="StyleBox" uid="uid://b1fp8xevt1iqh" path="res://assets/utility/rounded_card.tres" id="5_1cv8q"]
[ext_resource type="StyleBox" uid="uid://b3aa8kfkg57s2" path="res://assets/utility/normal_button.tres" id="7_g73yu"]
[ext_resource type="StyleBox" uid="uid://dk2380ptpabm8" path="res://assets/utility/pressed_button.tres" id="8_p72ht"]
[ext_resource type="StyleBox" uid="uid://6t158asqvdsh" path="res://assets/utility/hover_button.tres" id="9_11df4"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ohlq4"]
color = Color(0.10980392, 0.18431373, 0.2509804, 1)
grow_begin = 2.0
grow_end = 2.0
thickness = 2

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_36w3r")
level_manager_scene = ExtResource("2_ohlq4")
action_and_keys_scene = ExtResource("4_ejcdf")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_152ie")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("5_1cv8q")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_constants/line_spacing = 8
theme_override_fonts/font = ExtResource("2_ejcdf")
theme_override_font_sizes/font_size = 48
text = "TUTORIAL"
horizontal_alignment = 1

[node name="CardsContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 42
theme_override_constants/margin_bottom = 42

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="ActionsAndKeysContainer" type="HFlowContainer" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/h_separation = 64
alignment = 1
last_wrap_alignment = 2

[node name="StaticText" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer"]
layout_mode = 2

[node name="ObjectiveHeader" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/StaticText"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/StaticText/ObjectiveHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_ohlq4")

[node name="ObjectiveTitle" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/StaticText/ObjectiveHeader"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 1
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("2_ejcdf")
theme_override_font_sizes/font_size = 24
text = "OBJETIVO"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/StaticText/ObjectiveHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_ohlq4")

[node name="ObjectiveDesc" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/StaticText"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("2_ejcdf")
theme_override_font_sizes/font_size = 24
text = "Recolecta 10 MUESTRAS Y DOCUMENTA 5 FOTOGRAFIAS Y REGRESA CON VIDA.
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer" groups=["ButtonUI"]]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("2_ejcdf")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("7_g73yu")
theme_override_styles/normal_mirrored = ExtResource("7_g73yu")
theme_override_styles/pressed = ExtResource("8_p72ht")
theme_override_styles/pressed_mirrored = ExtResource("7_g73yu")
theme_override_styles/hover = ExtResource("9_11df4")
theme_override_styles/hover_mirrored = ExtResource("7_g73yu")
theme_override_styles/hover_pressed = ExtResource("7_g73yu")
theme_override_styles/hover_pressed_mirrored = ExtResource("7_g73yu")
theme_override_styles/focus = ExtResource("7_g73yu")
text = "Comenzar Misi√≥n"
script = ExtResource("3_ohlq4")

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/CardsContainer/VBoxContainer/NextButton" to="." method="_on_new_scene_pressed"]
